Un monton de cambios

--- a/index.html
+++ b/index.html
@@ -50,12 +50,13 @@
     </div><!--/.nav-collapse -->
   </div>
 
+  <div id="movie"></div>
   <div class="container-fluid">
       <div class="row-fluid">
-          <div id="left-panel" class="span1">
-          </div>
           <div class="span11 tab-content">
               <ul class="thumbnails" id="movies"></ul>
+          </div>
+          <div id="panel" class="span1">
           </div>
       </div><!--/row-->
   </div><!--/.fluid-container-->
