--- a/index.html
+++ b/index.html
@@ -34,15 +34,7 @@
                 <form id="searchForm" class="navbar-search pull-right" action="">
                 </form>
                 <ul class="nav pull-right span4">
-                    <li>
-      	                <div class="btn-toolbar">
-        	                <div class="btn-group" data-toggle="buttons-radio">
-          	                    <button id="limpio" class="btn">Letra</button>
-          	                    <button id="limpio" class="btn">Genero</button>
-          	                    <button class="btn">Anyo</button>
-          	                    <button class="btn">Ultimas descargadas</button>
-        	                </div>
-      	                </div>
+                    <li id="filters">
 	                </li>
                 </ul>
             </div>
