Reestructuramos el proyecto

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="navbar navbar-static">
     <div class="navbar-inner">
         <div class="container-fluid">
-            <a id="title" class="brand" href="#">Movies</a>
+            <a id="title" class="brand" href="#home">Movies</a>
             <div class="nav-collapse">
                 <form id="searchForm" class="navbar-search pull-right" action="">
                 </form>
@@ -41,11 +41,11 @@
         </div>
     </div><!--/.nav-collapse -->
   </div>
-
   <div id="movie"></div>
   <div class="container-fluid">
       <div class="row-fluid">
           <div class="span11 tab-content">
+              <div id="pagination"></div>
               <ul class="thumbnails" id="movies"></ul>
           </div>
           <div id="panel" class="span1">
