Casi funciona la paginacion REST

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <div class="navbar navbar-static">
     <div class="navbar-inner">
         <div class="container-fluid">
-            <a id="title" class="brand" href="#home">Movies</a>
+            <a id="title" class="brand" href="#latest">Movies</a>
             <div class="nav-collapse">
                 <form id="searchForm" class="navbar-search pull-right" action="">
                 </form>
@@ -48,7 +48,7 @@
               <div id="pagination"></div>
               <ul class="thumbnails" id="movies"></ul>
           </div>
-          <div id="panel" class="span1">
+          <div id="panel" class="span1 tabbable tabs-right">
           </div>
       </div><!--/row-->
   </div><!--/.fluid-container-->
